ABM de productos

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,8 +10,9 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
+ *= require_tree 
+ *= require dataTables/jquery.dataTables
+ *= require_self.
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -22,6 +23,10 @@ padding-top: 50px;
 background-color:#0489B1;
 
 }
+
+
+a:visited {color:#FFFFFF;} 
+
 
 .contenedor-principal{
 	width:100%;
