--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -18,9 +18,11 @@
 	    <div class="navbar-collapse collapse navbar-responsive-collapse">
 	      <ul class="nav navbar-nav navbar-right">
 	        <li><%= link_to "Inicio", root_path  %></li>
-	        <li class="scroll"><%= link_to "Sobre nosotros", "#nosotros" %></li>
-	        <li><%= link_to "Contacto", "/contacto"  %></li>
-	        <li><%= link_to "Ingresar",  new_user_session_path  %></li>
+			<li><%= link_to "Productos", "/products"  %></li>>
+	        <li><%= link_to "Pedidos", "#"  %></li>
+	        <li><%= link_to "Facturas", "#"  %></li>
+	        <li><%= link_to "Clientes", "#"  %></li>
+	        <li><%= link_to "Cerrar sesion",  "#" %></li>
 	      </ul>
 	    </div>
 	  </div>
