--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -2,10 +2,10 @@
  <div class="paneles">
         <div class="panel panel-info">
 	  	 	<div class="panel-heading">
-	            <h3 class="panel-title">Agregar un producto</h3>
+	            <h3 class="panel-title">Editar producto</h3>
 	        </div>
 	        <div class="panel-body">
-	        	<%= render 'form' %>
+	        		<%= render 'form' %>
 	        </div>
 	  	</div>
   </div>
