--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,41 @@
-<h2>Registrate</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Registrarse" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="container">
+    <div class="login">
+        <div class="row vertical-offset-100">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">Registrarse</h3>
+                  </div>
+                  <div class="panel-body">
+                      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                        <%= devise_error_messages! %>                        
+                       <fieldset>
+                        <div class="form-group">
+                            <%= f.text_field :name, autofocus: true, class: "form-control", placeholder:"Nombre" %>
+                       </div>
+                        <div class="form-group">
+                            <%= f.text_field :surname, class: "form-control", placeholder:"Apellido" %>
+                       </div>
+                        <div class="form-group">
+                            <%= f.email_field :email, class: "form-control", placeholder:"Email" %>
+                       </div>
+                        <div class="form-group">
+                            <%= f.email_field :email, class: "form-control", placeholder:"Email" %>
+                       </div>
+                       <div class="form-group">
+                          <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder:"Contraseña" %> 
+                          <% if @minimum_password_length %>
+                          <em>(<%= @minimum_password_length %> caracteres como minimo)</em>
+                          <% end %><br />
+                       </div>
+                        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder:"Confirmar contraseña"  %><br />
+                       <%= f.submit "Registrarse", class: "btn btn-lg btn-success btn-block" %>
+                    </fieldset>
+                    <%= render "devise/shared/links" %>
+                    <% end %>
+                  </div>
+              </div>
+            </div>
+        </div>
+    </div>
+</div>
